# fsldm-data-sdlc-agents

./: .env.example  .gitignore  .mcp.json  3-STEPS.txt  BANKING_WINDOWS_SETUP.md  BULLETPROOF_WINDOWS_SETUP.md  CLAUDE.md  CLAUDE_CODE_PROMPT.md  DEMO_SETUP.md  Dockerfile  Dockerfile.api  FINAL_MESSAGE_RAMESH.txt  FSLDM_Deposit_Mapping_Spec_COMPLETE.xlsx  INSTALLATION_CHECKLIST.md  MESSAGE_TO_RAMESH.md  Makefile  QUICK_MESSAGE_RAMESH.txt  QUICK_REFERENCE_WINDOWS.md  README.md  WINDOWS_CHECKLIST.md  WINDOWS_DEMO.md  app.py  create-offline-package.bat  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  run-demo.bat  setup.bat  setup_and_push.bat  verify-setup.bat  windows-demo.bat
.claude/: settings.json  settings.local.json
.streamlit/: config.toml
agents/: config.py  contacts.py  dev_agent.py  excel_loader.py  graph.py  llm.py  logging_setup.py  main.py  mapping_agent.py  runs.py  sql_validate.py  state.py  testing_agent.py
api/: server.py
docs/: UAT_GUIDE.md
gx/: deposit_expectations.json
schemas/: deposit_source.json  deposit_target.json
scripts/: install-claude-plugins.md
soda/: deposit_checks.yml
sql_bteq/: deposit_validate_all.sql
sql_dbt/: schema.yml
sql_snowflake_gen/: fct_dpos_bal.gen.sql  fct_dpos_evnt.gen.sql  fct_intrs_accrl.gen.sql
sql_teradata/: fct_dpos_bal.sql  fct_dpos_evnt.sql  fct_intrs_accrl.sql
tests/: conftest.py  test_dev_agent.py  test_mapping_agent.py  test_sql_validate.py  test_testing_agent.py
web/: .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  (+1 more)
(+47 files in other folders)
