[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fsldm-data-sdlc-agents"
version = "0.1.0"
description = "Multi-agent FSLDM Deposit data warehouse SDLC pipeline (Teradata + dbt)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jabbir", email = "basha0543@gmail.com" }]
dependencies = [
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "langchain-anthropic>=0.2.0",
  "anthropic>=0.40.0",
  "sqlglot>=25.0.0",
  "openpyxl>=3.1.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "structlog>=24.0.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
prod = ["great-expectations>=1.0.0", "soda-core>=3.3.0", "dbt-core>=1.8.0", "dbt-snowflake>=1.8.0"]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.6.0", "mypy>=1.10.0"]

[project.scripts]
fsldm = "agents.main:app"

[tool.setuptools]
packages = ["agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
python_files = ["test_*.py"]
python_functions = ["test_*"]
norecursedirs = ["agents", ".venv", "build", "dist"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
